syntax = "proto3";
package auth;
import "google/protobuf/timestamp.proto";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc ValidateUser(ValidateUserRequest) returns (User) {}
  rpc SignIn(User) returns (SignUpResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignUpResponse {
  string refreshToken = 1;
  string accessToken = 2;
  User user = 3;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;
  UserRole role = 6;
}

enum UserRole {
  NADMIN = 0; // Non-Admin
  ADMIN = 1;
}

message ValidateUserRequest {
  string email = 1;
  string pass = 2;
}

message RefreshTokenRequest {
  User user = 1;
  string refreshToken = 2;
}

message RefreshTokenResponse { string accessToken = 1; }