syntax = "proto3";

package products;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service ProductsService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc FindAll(FindAllRequest) returns (FindAllResponse) {}
}

message CreateRequest {
  string name = 1;
  double price = 2;
  int32 quantity = 3;
  string admin_id = 4;
}

message CreateResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}

message FindAllRequest {
  string name = 1;
  google.protobuf.DoubleValue minPrice = 2;
  google.protobuf.DoubleValue maxPrice = 3;
  google.protobuf.Int32Value minQuantity = 4;
  google.protobuf.Int32Value maxQuantity = 5;
  string sortBy = 6;
  string order = 7;
  google.protobuf.Int32Value limit = 8;
  google.protobuf.Int32Value page = 9;
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}

message Meta {
  int32 total = 1;
  int32 page = 2;
  int32 lastPage = 3;
  bool hasNextPage = 4;
  bool hasPreviousPage = 5;
}

message FindAllResponse {
  repeated Product products = 1;
  Meta meta = 2;
}
